--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Home | ansaf</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid bg-home-top">
         <div class="row">
             <div class="col-lg-1">
                 <img class="img-fluid" src="images/ansaf-logo.png" alt="">
