--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-fluid" src="images/home-top-image-slider-08.png" alt="">
+                <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
             </div>
         </div>
     </div>
