--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
     <title>Home | ansaf</title>
 </head>
 <body>
-    <div class="container-fluid bg-home-top">
-        <div class="row">
-            <div class="col-lg-1">
-                <img class="img-fluid" src="images/ansaf-logo.png" alt="">
+    <div class="container-fluid">
+        <div class="navbar">
+            <div class="row">
+                <div class="col-lg-3">
+                    <img class="img-fluid" src="images/logo-white.png" alt="">
+                </div>
             </div>
         </div>
+    </div>
+    <div class="container-fluid bg-home-top">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-10 offset-lg-2 pr-0">
                 <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
             </div>
         </div>
@@ -31,7 +35,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>   
-    <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js'></script><script  src="./script.js"></script>
-    <script src="https://granita.netlify.app/js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
