--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
                 <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
             </div>
         </div>
+        <div class="row home-about">
+            <div class="col-l-12">
+                <div class="mx-auto d-block w-50 text-center">
+                    <h6 class="text-orange">
+                        TENTANG KAMI
+                    </h6>
+                    <p class="text-white">
+                        Kami memahami bahwa batubara adalah salah satu sumber daya alam yang berperan penting bagi ketersediaan energi bagi manusia. Upaya kami masuk kesektor pertambangan batubara, yang membutuhkan kesungguhan dalam mengelolanya, berawal dari keinginan untuk dapat berperan dalam bidang yang membawa manfaat bagi masyarakat.
+                    </p>
+                    <a href="#" class="link-white-border">
+                        SELENGKAPNYA
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
