--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="row home-about">
-            <div class="col-l-12">
+            <div class="col-lg-12">
                 <div class="mx-auto d-block w-50 text-center">
                     <h6 class="text-orange">
                         TENTANG KAMI
