add assets about-content

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p class="text-white">
                         Kami memahami bahwa batubara adalah salah satu sumber daya alam yang berperan penting bagi ketersediaan energi bagi manusia. Upaya kami masuk kesektor pertambangan batubara, yang membutuhkan kesungguhan dalam mengelolanya, berawal dari keinginan untuk dapat berperan dalam bidang yang membawa manfaat bagi masyarakat.
                     </p>
-                    <a href="#" class="link-white-border">
+                    <a href="#" class="link-white-border my-3 d-inline-block">
                         SELENGKAPNYA
                     </a>
                 </div>
