add business image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,22 @@
     </div>
     <div class="container-fluid home-mid-content">
         <div class="row">
-            <div class="col-lg-12"></div>
+            <div class="col-lg-4">
+                <p class="text-orange">
+                    BISNIS KAMI
+                </p>
+                <h5>
+                    PT Ansaf Inti Resources<br>
+                    memiliki bisnis utama<br>
+                    dibindang pertambangan<br>
+                </h5>
+            </div>
+            <div class="col-lg-4">
+                <div class="image-thumbnail">
+                    <img class="img-fluid" src="images/home-our-business-10.jpg">
+                    <img src="images/thubmnail-shadow-blue-10.png">
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
