--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="col-lg-4">
                 <div class="image-thumbnail">
                     <img class="img-fluid" src="images/home-our-business-10.jpg">
-                    <img src="images/thubmnail-shadow-blue-10.png">
+                    <img class="img-fluid" src="images/thubmnail-shadow-blue-10.png">
                 </div>
             </div>
         </div>
