--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                     <img class="img-fluid" src="images/thubmnail-shadow-blue-10.png">
                 </div>
             </div>
+            <div class="col-lg-4">
+                <div class="image-thumbnail">
+                    <img src="images/home-our-business-10.jpg" alt="">
+                    <img src="images/thubmnail-shadow-blue-10.png">
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
