--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
         <div class="row">
             <div class="col-lg-10 offset-lg-2 pr-0">
                 <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
+                <div  style="float: none !important;
+                position: absolute;
+                transform: skew(-19.5deg);
+                right: -150px; overflow:hidden;">
+                <img style="
+                transform: skew(19.5deg);
+                " class="img-fluid" src="images/home-top-image-slider-08.jpg" alt="">
+                </div>
             </div>
         </div>
         <div class="row home-about">
