--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
         <div class="row">
             <div class="col-lg-10 offset-lg-2 pr-0">
                 <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
-                <div  style="float: none !important;
-                position: absolute;
-                transform: skew(-19.5deg);
-                right: -150px; overflow:hidden;">
+                <div  style="position: absolute;
+                transform: skewX(-19.3deg);
+                right: 16px;
+                overflow: hidden;
+                width: 1008px;
+                height: 769px;">
                 <img style="
                 transform: skew(19.5deg);
                 " class="img-fluid" src="images/home-top-image-slider-08.jpg" alt="">
@@ -69,12 +71,6 @@
                 <div class="image-thumbnail">
                     <img class="img-fluid" src="images/home-our-business-10.jpg">
                     <img class="img-fluid" src="images/thubmnail-shadow-blue-10.png">
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="image-thumbnail">
-                    <img src="images/home-our-business-10.jpg" alt="">
-                    <img src="images/thubmnail-shadow-blue-10.png">
                 </div>
             </div>
         </div>
