--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
     <div class="container-fluid bg-home-top">
         <div class="row">
             <div class="col-lg-10 offset-lg-2 pr-0">
-                <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
+                <img style="opacity: 0;" class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
                 <div  style="position: absolute;
                 transform: skewX(-19.3deg);
                 right: 16px;
                 overflow: hidden;
                 width: 1008px;
                 height: 769px;">
-                <img style="
-                transform: skew(19.5deg);
-                " class="img-fluid" src="images/home-top-image-slider-08.jpg" alt="">
+                    <img style="
+                    transform: skew(19.5deg);
+                    " class="" src="images/home-top-image-slider-08.jpg" alt="">
                 </div>
             </div>
         </div>
