--- a/index.html
+++ b/index.html
@@ -17,26 +17,16 @@
     <div class="container-fluid">
         <div class="navbar">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                     <img class="img-fluid" src="images/logo-white.png" alt="">
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid bg-home-top">
+    <div class="container-fluid bg-home-top overflow-hidden">
         <div class="row">
             <div class="col-lg-10 offset-lg-2 pr-0">
-                <img style="opacity: 0;" class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
-                <div  style="position: absolute;
-                transform: skewX(-19.3deg);
-                right: 16px;
-                overflow: hidden;
-                width: 1008px;
-                height: 769px;">
-                    <img style="
-                    transform: skew(19.5deg);
-                    " class="" src="images/home-top-image-slider-08.jpg" alt="">
-                </div>
+                <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
             </div>
         </div>
         <div class="row home-about">
