--- a/index.html
+++ b/index.html
@@ -24,19 +24,27 @@
         </div>
     </div>
     <div class="container-fluid bg-home-top overflow-hidden">
-        <div class="row">
-            <div class="col-lg-10 offset-lg-2 pr-0">
-                <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
+        <div class="carousel-homebanner owl-theme">
+            <div class="item">
+                <div class="row">
+                    <div class="col-lg-10 offset-lg-2 pr-0">
+                        <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row home-about">
             <div class="col-lg-12">
-                <div class="mx-auto d-block w-50 text-center">
-                    <h6 class="text-orange">
+                <div class="mx-auto d-block text-center">
+                    <h6 class="text-orange mb-4">
                         TENTANG KAMI
                     </h6>
                     <p class="text-white">
-                        Kami memahami bahwa batubara adalah salah satu sumber daya alam yang berperan penting bagi ketersediaan energi bagi manusia. Upaya kami masuk kesektor pertambangan batubara, yang membutuhkan kesungguhan dalam mengelolanya, berawal dari keinginan untuk dapat berperan dalam bidang yang membawa manfaat bagi masyarakat.
+                        Kami memahami bahwa batubara adalah salah satu sumber daya alam yang<br>
+                        berperan penting bagi ketersediaan energi bagi manusia. Upaya kami masuk<br>
+                        kesektor pertambangan batubara, yang membutuhkan kesungguhan dalam<br>
+                        mengelolanya, berawal dari keinginan untuk dapat berperan dalam bidang yang<br>
+                        membawa manfaat bagi masyarakat.
                     </p>
                     <a href="#" class="link-white-border my-3 d-inline-block">
                         SELENGKAPNYA
