--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="carousel-homebanner owl-theme">
             <div class="item">
                 <div class="row">
-                    <div class="col-lg-10 offset-lg-2 pr-0">
+                    <div class="col-lg-10 offset-lg-2 px-lg-0">
                         <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
                     </div>
                 </div>
