--- a/index.html
+++ b/index.html
@@ -24,11 +24,23 @@
         </div>
     </div>
     <div class="container-fluid bg-home-top overflow-hidden">
-        <div class="carousel-homebanner owl-theme">
-            <div class="item">
-                <div class="row">
-                    <div class="col-lg-10 offset-lg-2 px-lg-0">
-                        <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
+        <div class="row">
+            <div class="col-lg-12 px-0">
+                <div class="carousel-homebanner owl-theme">
+                    <div class="item">
+                        <div class="col-lg-2">
+                            <h1 class="text-white">
+                                Solution
+                                through
+                                Partnership
+                            </h1>
+                            <p class="text-white">
+                                Ansaf sangat tepat menjadi mitra karena memerikan solusi yang dibutuhkan klien
+                            </p>
+                        </div>
+                        <div class="col-lg-10 px-lg-0">
+                            <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
