--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
             <div class="col-lg-12 px-0">
                 <div class="carousel-homebanner owl-theme">
                     <div class="item">
-                        <div class="col-lg-2">
-                            <h1 class="text-white">
-                                Solution
-                                through
-                                Partnership
-                            </h1>
-                            <p class="text-white">
-                                Ansaf sangat tepat menjadi mitra karena memerikan solusi yang dibutuhkan klien
-                            </p>
+                        <div class="col-lg-2 home-caption">
+                            <div class="wrapper">
+                                <h1 class="text-white">
+                                    Solution
+                                    through
+                                    Partnership
+                                </h1>
+                                <p class="text-white">
+                                    Ansaf sangat tepat menjadi<br>
+                                    mitra karena memerikan solusi<br>
+                                    yang dibutuhkan klien
+                                </p>
+                            </div>
                         </div>
                         <div class="col-lg-10 px-lg-0">
                             <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
