--- a/index.html
+++ b/index.html
@@ -28,22 +28,24 @@
             <div class="col-lg-12 px-0">
                 <div class="carousel-homebanner owl-theme">
                     <div class="item">
-                        <div class="col-lg-2 home-caption">
-                            <div class="wrapper">
-                                <h1 class="text-white">
-                                    Solution
-                                    through
-                                    Partnership
-                                </h1>
-                                <p class="text-white">
-                                    Ansaf sangat tepat menjadi<br>
-                                    mitra karena memerikan solusi<br>
-                                    yang dibutuhkan klien
-                                </p>
+                        <div class="row">
+                            <div class="col-lg-2 home-caption">
+                                <div class="wrapper">
+                                    <h1 class="text-white">
+                                        Solution
+                                        through
+                                        Partnership
+                                    </h1>
+                                    <p class="text-white">
+                                        Ansaf sangat tepat menjadi<br>
+                                        mitra karena memerikan solusi<br>
+                                        yang dibutuhkan klien
+                                    </p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-lg-10 px-lg-0">
-                            <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
+                            <div class="col-lg-10">
+                                <img class="img-fluid float-right" src="images/home-top-image-slider-08.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
