tractors setup position

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                     <a href="#" class="link-white-border my-3 d-inline-block">
                         SELENGKAPNYA
                     </a>
+                    <img class="tractors" src="images/home-about-section-asset-08.png" alt="">
+                    <img class="guy" src="images/home-about-section-asset-09.png" alt="">
                 </div>
             </div>
         </div>
