--- a/index.html
+++ b/index.html
@@ -78,22 +78,35 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid home-mid-content">
-        <div class="row">
-            <div class="col-lg-4">
-                <p class="text-orange">
-                    BISNIS KAMI
-                </p>
-                <h5>
-                    PT Ansaf Inti Resources<br>
-                    memiliki bisnis utama<br>
-                    dibindang pertambangan<br>
-                </h5>
+    <div class="container-fluid home-mid-content py-5">
+        <div class="row my-5">
+            <div class="col-lg-4 py-lg-5">
+                <div class="wrapper d-flex">
+                    <div class="inline-block">
+                        <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
+                    </div>
+                    <div class="inline-block pl-lg-4">
+                        <p class="text-orange">
+                            BISNIS KAMI
+                        </p>
+                        <h5>
+                            PT Ansaf Inti Resources<br>
+                            memiliki bisnis utama<br>
+                            dibindang pertambangan<br>
+                        </h5>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-4">
                 <div class="image-thumbnail">
                     <img class="img-fluid" src="images/home-our-business-10.jpg">
-                    <img class="img-fluid" src="images/thubmnail-shadow-blue-10.png">
+                    <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="image-thumbnail">
+                    <img class="img-fluid" src="images/home-our-business-10.jpg">
+                    <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
                 </div>
             </div>
         </div>
