--- a/index.html
+++ b/index.html
@@ -97,22 +97,53 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
-                <div class="image-thumbnail">
-                    <img class="img-fluid" src="images/home-our-business-10.jpg">
-                    <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="image-thumbnail">
-                    <img class="img-fluid" src="images/home-our-business-10.jpg">
-                    <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
+            <div class="col-lg-8">
+                <div class="carousel-ourbusiness owl-theme">
+                    <div class="item">
+                        <div class="thumbnail">
+                            <div class="image-thumbnail">
+                                <img class="img-fluid" src="images/home-our-business-10.jpg">
+                                <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="thumbnail">
+                            <div class="image-thumbnail">
+                                <img class="img-fluid" src="images/home-our-business-10.jpg">
+                                <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="thumbnail">
+                            <div class="image-thumbnail">
+                                <img class="img-fluid" src="images/home-our-business-10.jpg">
+                                <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="thumbnail">
+                            <div class="image-thumbnail">
+                                <img class="img-fluid" src="images/home-our-business-10.jpg">
+                                <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="thumbnail">
+                            <div class="image-thumbnail">
+                                <img class="img-fluid" src="images/home-our-business-10.jpg">
+                                <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row bg-mid-value">
             <div class="col-lg-12">
-                <img src="images/home" alt="">
             </div>
         </div>
     </div>
