--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div class="container-fluid home-mid-content py-5">
         <div class="row my-5">
-            <div class="col-lg-4 py-lg-5">
+            <div class="col-lg-3 py-lg-5 pl-lg-0">
                 <div class="wrapper d-flex">
                     <div class="inline-block">
                         <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
@@ -97,13 +97,18 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-9 pr-lg-0">
                 <div class="carousel-ourbusiness owl-theme">
                     <div class="item">
                         <div class="thumbnail">
                             <div class="image-thumbnail">
                                 <img class="img-fluid" src="images/home-our-business-10.jpg">
-                                <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
+                                <img class="img-fluid shadow" src="images/thubmnail-shadow-blue-10.png">
+                            </div>
+                            <div class="title">
+                                <h6 class="text-white">
+                                    ANSAF MINING
+                                </h6>
                             </div>
                         </div>
                     </div>
@@ -111,7 +116,12 @@
                         <div class="thumbnail">
                             <div class="image-thumbnail">
                                 <img class="img-fluid" src="images/home-our-business-10.jpg">
-                                <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
+                                <img class="img-fluid shadow" src="images/thubmnail-shadow-blue-10.png">
+                            </div>
+                            <div class="title">
+                                <h6 class="text-white">
+                                    ANSAF MINING
+                                </h6>
                             </div>
                         </div>
                     </div>
@@ -119,7 +129,12 @@
                         <div class="thumbnail">
                             <div class="image-thumbnail">
                                 <img class="img-fluid" src="images/home-our-business-10.jpg">
-                                <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
+                                <img class="img-fluid shadow" src="images/thubmnail-shadow-blue-10.png">
+                            </div>
+                            <div class="title">
+                                <h6 class="text-white">
+                                    ANSAF MINING
+                                </h6>
                             </div>
                         </div>
                     </div>
@@ -127,7 +142,12 @@
                         <div class="thumbnail">
                             <div class="image-thumbnail">
                                 <img class="img-fluid" src="images/home-our-business-10.jpg">
-                                <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
+                                <img class="img-fluid shadow" src="images/thubmnail-shadow-blue-10.png">
+                            </div>
+                            <div class="title">
+                                <h6 class="text-white">
+                                    ANSAF MINING
+                                </h6>
                             </div>
                         </div>
                     </div>
@@ -135,7 +155,10 @@
                         <div class="thumbnail">
                             <div class="image-thumbnail">
                                 <img class="img-fluid" src="images/home-our-business-10.jpg">
-                                <img class="img-fluid shadow d-none" src="images/thubmnail-shadow-blue-10.png">
+                                <img class="img-fluid shadow" src="images/thubmnail-shadow-blue-10.png">
+                            </div>
+                            <div class="title">
+                                ANSAF MINING
                             </div>
                         </div>
                     </div>
