--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             </div>
                             <div class="title">
                                 <h6 class="text-white">
-                                    ANSAF MINING
+                                    ANSAF SERVICES
                                 </h6>
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                             </div>
                             <div class="title">
                                 <h6 class="text-white">
-                                    ANSAF MINING
+                                    ANSAF LOGISTIC
                                 </h6>
                             </div>
                         </div>
