--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 </div>
             </div>
             <div class="col-lg-9 pr-lg-0">
+                <img class="white-shadow-right" src="images/white-shadow-right-09.png" alt="">
                 <div class="carousel-ourbusiness owl-theme">
                     <div class="item">
                         <div class="thumbnail">
