--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
             </div>
         </div>
         <div class="row bg-mid-value">
-            <div class="col-lg-12">
+            <div class="container">
+                <div class="row">
+                    
+                </div>
             </div>
         </div>
     </div>
