--- a/index.html
+++ b/index.html
@@ -169,7 +169,21 @@
         <div class="row bg-mid-value">
             <div class="container">
                 <div class="row">
-                    
+                    <div class="col-lg-10 offset-lg-2">
+                        <h6 class="text-orange">
+                            NILAI-NILAI KAMI
+                        </h6>
+                        <h4 class="text-dark-blue">
+                            Melangkah setahap demi setahap, dengan<br>
+                            keyakinan dan integritas, menampilkan<br>
+                            produktifitas, komitmen dan kesetiaan.
+                        </h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 offset-lg-2">
+
+                    </div>
                 </div>
             </div>
         </div>
