--- a/index.html
+++ b/index.html
@@ -173,16 +173,27 @@
                         <h6 class="text-orange">
                             NILAI-NILAI KAMI
                         </h6>
-                        <h4 class="text-dark-blue">
+                        <h3 class="text-dark-blue">
                             Melangkah setahap demi setahap, dengan<br>
                             keyakinan dan integritas, menampilkan<br>
                             produktifitas, komitmen dan kesetiaan.
-                        </h4>
+                        </h3>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3 offset-lg-2">
-
+                    <div class="col-lg-10 offset-lg-2">
+                        <div class="col-lg-3 offset-lg-2 overflow-hidden">
+                            <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10.jpg" alt="">
+                            <img class="img-fluid w-100 shadow d-block" src="images/thubmnail-shadow-blue-10.png" alt="">
+                        </div>
+                        <div class="col-lg-3 overflow-hidden">
+                            <img class="img-fluid w-100 d-block" src="images/our-value-content-images-11.jpg" alt="">
+                            <img class="img-fluid w-100 shadow d-block" src="images/thubmnail-shadow-blue-10.png" alt="">
+                        </div>
+                        <div class="col-lg-3 overflow-hidden">
+                            <img class="img-fluid w-100 d-block" src="images/our-value-content-images-12.jpg" alt="">
+                            <img class="img-fluid w-100 shadow d-block" src="images/thubmnail-shadow-blue-10.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
