--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
             </div>
         </div>
         <div class="row bg-mid-value">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-10 offset-lg-2">
+                    <div class="col-lg-9 offset-lg-3">
                         <h6 class="text-orange">
                             NILAI-NILAI KAMI
                         </h6>
@@ -180,19 +180,21 @@
                         </h3>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-10 offset-lg-2">
-                        <div class="col-lg-3 offset-lg-2 overflow-hidden">
-                            <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10.jpg" alt="">
-                            <img class="img-fluid w-100 shadow d-block" src="images/thubmnail-shadow-blue-10.png" alt="">
-                        </div>
-                        <div class="col-lg-3 overflow-hidden">
-                            <img class="img-fluid w-100 d-block" src="images/our-value-content-images-11.jpg" alt="">
-                            <img class="img-fluid w-100 shadow d-block" src="images/thubmnail-shadow-blue-10.png" alt="">
-                        </div>
-                        <div class="col-lg-3 overflow-hidden">
-                            <img class="img-fluid w-100 d-block" src="images/our-value-content-images-12.jpg" alt="">
-                            <img class="img-fluid w-100 shadow d-block" src="images/thubmnail-shadow-blue-10.png" alt="">
+                <div class="row my-lg-5">
+                    <div class="col-lg-9 offset-lg-3 pr-lg-5">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10.jpg" alt="">
+                                <img class="img-fluid w-100 shadow d-block" src="images/thubmnail-shadow-blue-10.png" alt="">
+                            </div>
+                            <div class="col-lg-4 overflow-hidden">
+                                <img class="img-fluid w-100 d-block" src="images/our-value-content-images-11.jpg" alt="">
+                                <img class="img-fluid w-100 shadow d-block" src="images/thubmnail-shadow-blue-10.png" alt="">
+                            </div>
+                            <div class="col-lg-4 overflow-hidden">
+                                <img class="img-fluid w-100 d-block" src="images/our-value-content-images-12.jpg" alt="">
+                                <img class="img-fluid w-100 shadow d-block" src="images/thubmnail-shadow-blue-10.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
