--- a/index.html
+++ b/index.html
@@ -205,8 +205,27 @@
         <div class="row news-section">
             <div class="col-lg-12 px-lg-0">
                 <img class="img-content" src="images/news-images-content-10.jpg" alt="">
-                <div class="content-wrapper">
-                    
+                <div class="content-wrapper d-flex">
+                    <div class="inline-block">
+                        <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
+                    </div>
+                    <div class="inline-block pl-lg-4">
+                        <h6 class="text-orange">
+                            CSR & HSE
+                        </h6>
+                        <h4 class="text-white">
+                            Berdaya Bukan Semata<br>
+                            Materi
+                        </h4>
+                        <p class="text-white">
+                            Tanggung Jawab Sosial Perusahaan bukan hanya<br>
+                            sekedar kewajiban. Bagi kami, tanggung jawab<br>
+                            sosial melekat dengan operasi kami di manapun.
+                        </p>
+                        <a href="#" class="link-white-border my-3 d-inline-block">
+                            SELENGKAPNYA
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
