--- a/about.html
+++ b/about.html
@@ -18,14 +18,14 @@
         <div class="navbar">
             <div class="row">
                 <div class="col-lg-4">
-                    <img class="img-fluid" src="images/logo-white.png" alt="">
+                    <img class="img-fluid" src="images/ansaf-logo.png" alt="">
                 </div>
             </div>
         </div>
     </div>
     <div class="container-fluid">
       <div class="row">
-        
+
       </div>
     </div> 
     
