--- a/about.html
+++ b/about.html
@@ -25,7 +25,14 @@
     </div>
     <div class="container-fluid">
       <div class="row">
-
+        <div class="col-lg-12">
+          <h6 class="text-orange">
+            ABOUT US
+          </h6>
+          <h2 class="text-dark-blue">
+            Company Profile
+          </h2>
+        </div>
       </div>
     </div> 
     
