--- a/about.html
+++ b/about.html
@@ -26,12 +26,20 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12">
-          <h6 class="text-orange">
-            ABOUT US
-          </h6>
-          <h2 class="text-dark-blue">
-            Company Profile
-          </h2>
+          <div class="content-wrapper d-flex">
+            <div class="inline-block">
+                <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
+            </div>
+            <div class="inline-block pl-lg-4">
+                <h6 class="text-orange">
+                    ABOUT US
+                </h6>
+                <h4 class="text-white">
+                    Berdaya Bukan Semata<br>
+                    Materi
+                </h4>
+            </div>
+        </div>
         </div>
       </div>
     </div> 
