--- a/about.html
+++ b/about.html
@@ -34,10 +34,13 @@
                 <h6 class="text-orange">
                     ABOUT US
                 </h6>
-                <h4 class="text-white">
-                    Berdaya Bukan Semata<br>
-                    Materi
-                </h4>
+                <h2 class="text-dark-blue">
+                  Company Profile
+                </h2>
+                <p class="text-dark-blue">
+                  ...tumbuh secara bertahap, dengan keyakinan - dan integritas, produktivitas<br>
+                  yang terbukti, komitmen, serta loyalitas. Kami adalah ANSAF!
+                </p>
             </div>
         </div>
         </div>
