--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid about-top">
       <div class="row">
         <div class="col-lg-12">
           <div class="content-wrapper d-flex">
@@ -42,7 +42,7 @@
                   yang terbukti, komitmen, serta loyalitas. Kami adalah ANSAF!
                 </p>
             </div>
-        </div>
+          </div>
         </div>
       </div>
     </div> 
