--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     </div>
     <div class="container-fluid about-top">
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12 pl-lg-0">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
                 <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
