--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <div class="container-fluid about-top">
       <div class="row">
         <div class="col-lg-12 pl-lg-0">
-          <img src="images/segitiga-biru-kanan-04.png" alt="">
+          <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
                 <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
