--- a/about.html
+++ b/about.html
@@ -47,10 +47,10 @@
         </div>
       </div>
     </div> 
-    <div class="container-fluid">
+    <div class="container-fluid about-mid">
       <div class="row">
         <div class="col-lg-12">
-          <img src="images/mid-content-images-05.png" alt="">
+          <img class="" src="images/mid-content-images-05.png" alt="">
         </div>
       </div>
     </div>
