--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
     <div class="container-fluid about-mid">
       <div class="row">
         <div class="col-lg-12">
-          <img class="" src="images/mid-content-images-05.png" alt="">
+          <img class="content-mid" src="images/mid-content-images-05.png" alt="">
         </div>
       </div>
     </div>
