--- a/about.html
+++ b/about.html
@@ -50,6 +50,21 @@
     <div class="container-fluid about-mid">
       <div class="row">
         <div class="col-lg-12">
+          <div class="content-wrapper d-flex">
+            <div class="inline-block">
+                <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
+            </div>
+            <div class="inline-block pl-lg-4">
+                <h2 class="text-orange">
+                  "
+                </h2>
+                <p class="text-white">
+                  ...untuk kami di Ansaf, baik tidaklah jika kami mampu berkontribusikan<br>
+                  yang paling OPTIMAL - dengan sepenuh hati untuk tumbuh BERSAMA<br>
+                  dengan komitmen dan kerjasama tim yang kuat.
+                </p>
+            </div>
+          </div>
           <img class="content-mid" src="images/mid-content-images-05.png" alt="">
         </div>
       </div>
