--- a/about.html
+++ b/about.html
@@ -47,9 +47,9 @@
         </div>
       </div>
     </div> 
-    <div class="container-fluid about-mid">
+    <div class="container-fluid about-mid bg-dark-blue">
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12 pl-lg-0">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
                 <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
