--- a/about.html
+++ b/about.html
@@ -68,6 +68,14 @@
           <img class="content-mid" src="images/mid-content-images-05.png" alt="">
         </div>
       </div>
+      <div class="row my-lg-5">
+        <div class="col-lg-12">
+          <h3 class="text-white">
+            Milestone
+          </h3>
+          
+        </div>
+      </div>
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
