--- a/about.html
+++ b/about.html
@@ -73,7 +73,12 @@
           <h3 class="text-white">
             Milestone
           </h3>
-          
+          <div class="carousel-homebanner owl-theme">
+            <div class="item">
+                <div class="row">
+                </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
