--- a/about.html
+++ b/about.html
@@ -76,6 +76,19 @@
           <div class="carousel-homebanner owl-theme">
             <div class="item">
                 <div class="row">
+                  <div class="col-lg-3">
+                    <h2 class="text-white">
+                      2011
+                    </h2>
+                  </div>
+                  <div class="col-lg-9">
+                    <p class="text-white">
+                      Tahun 2011 Ansaf mulai masuk ke sektor pertambangan melalui proses<br>
+                      jual beli batubara (coal trading).  Serangkaian sandungan dalam proses ini<br>
+                      justru mendorong Pendiri untuk masuk ke kegiatan langsung dalam<br>
+                      penambangan batubara.
+                    </p>
+                  </div>
                 </div>
             </div>
           </div>
