--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="row my-lg-5">
-        <div class="col-lg-12">
+        <div class="col-lg-8 offset-lg-2">
           <h3 class="text-white">
             Milestone
           </h3>
