--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
           <img class="content-mid" src="images/mid-content-images-05.png" alt="">
         </div>
       </div>
-      <div class="row my-lg-5">
+      <div class="row my-lg-5 second-section">
         <div class="col-lg-8 offset-lg-2">
           <h3 class="text-white">
             Milestone
