--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             </div>
         </div>
     </div>
-    <div class="contaienr-fluid footer">
+    <div class="contaienr-fluid footer-content">
         <div class="row">
             <div class="col-lg-12">
                 <h3 class="text-dark-blue">
@@ -239,17 +239,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <h2 class="text-dark-blue">
-                            9+
-                        </h2>
-                        <h6 class="text-orange">
-                            TAHUN
-                        </h6>
-                    </div>
-                </div>
+            <div class="col-lg-4">
+                <h2 class="text-dark-blue title">
+                    9+
+                </h2>
+                <h6 class="text-orange">
+                    TAHUN
+                </h6>
             </div>
         </div>
     </div>
