--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <div class="container-fluid bottom-content">
         <div class="row news-section">
             <div class="col-lg-12 px-lg-0">
-                <img class="img-content" src="images/news-images-content-10.jpg" alt="">
+                <img class="img-content" src="images/news-images-content-10-08.jpg" alt="">
                 <div class="content-wrapper d-flex">
                     <div class="inline-block">
                         <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
@@ -240,7 +240,7 @@
         </div>
         <div class="row">
             <div class="col-lg-4">
-                <h2 class="text-dark-blue title">
+                <h2 class="text-dark-blue number-counter">
                     9+
                 </h2>
                 <h6 class="text-orange">
