--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
             </div>
         </div>
     </div>
-    <div class="contaienr-fluid footer-content">
-        <div class="row">
+    <div class="container-fluid footer-content">
+        <div class="row text-center">
             <div class="col-lg-12">
                 <h3 class="text-dark-blue">
                     Pencapaian Kami
@@ -239,13 +239,33 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4">
-                <h2 class="text-dark-blue number-counter">
-                    9+
-                </h2>
-                <h6 class="text-orange">
-                    TAHUN
-                </h6>
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-lg-4">
+                        <h2 class="text-dark-blue number-counter">
+                            9+
+                        </h2>
+                        <h6 class="text-orange">
+                            TAHUN
+                        </h6>
+                    </div>
+                    <div class="col-lg-4">
+                        <h2 class="text-dark-blue number-counter">
+                            100+
+                        </h2>
+                        <h6 class="text-orange">
+                            KLIEN
+                        </h6>
+                    </div>
+                    <div class="col-lg-4">
+                        <h2 class="text-dark-blue number-counter">
+                            2,000+
+                        </h2>
+                        <h6 class="text-orange">
+                            KARYAWAN
+                        </h6>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
