--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-4">
-                        <h2 class="text-dark-blue number-counter">
+                        <h2 class="text-blue number-counter">
                             9+
                         </h2>
                         <h6 class="text-orange">
@@ -250,7 +250,7 @@
                         </h6>
                     </div>
                     <div class="col-lg-4">
-                        <h2 class="text-dark-blue number-counter">
+                        <h2 class="text-blue number-counter">
                             100+
                         </h2>
                         <h6 class="text-orange">
@@ -258,7 +258,7 @@
                         </h6>
                     </div>
                     <div class="col-lg-4">
-                        <h2 class="text-dark-blue number-counter">
+                        <h2 class="text-blue number-counter">
                             2,000+
                         </h2>
                         <h6 class="text-orange">
