--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <div class="container-fluid footer-content">
         <div class="row text-center">
             <div class="col-lg-12">
-                <h4 class="text-dark-blue">
+                <h4 class="text-dark-blue pb-lg-4">
                     Pencapaian Kami
                 </h4>
             </div>
@@ -266,6 +266,13 @@
                         </h6>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid footer-details">
+        <div class="row">
+            <div class="col-lg-2">
+                <img class="img-fluid text-right" src="images/ansaf-logo.png" alt="">
             </div>
         </div>
     </div>
