--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     <div class="container-fluid footer-details">
         <div class="row">
             <div class="col-lg-2">
-                <img class="img-fluid text-right" src="images/ansaf-logo.png" alt="">
+                <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
             </div>
         </div>
     </div>
