--- a/index.html
+++ b/index.html
@@ -274,6 +274,10 @@
             <div class="col-lg-2">
                 <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
             </div>
+            <div class="col-lg-3">
+                Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak Agung Gede Agung Lot 8.6-8.7 Kawasan Mega KuninganJakarta 12950
+
+            </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
