--- a/index.html
+++ b/index.html
@@ -274,9 +274,15 @@
             <div class="col-lg-2">
                 <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
             </div>
-            <div class="col-lg-3">
-                Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak Agung Gede Agung Lot 8.6-8.7 Kawasan Mega KuninganJakarta 12950
-
+            <div class="col-lg-4">
+                Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
+                Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
+                KuninganJakarta 12950
+            </div>
+            <div class="col-lg-4">
+                <a href="#">
+                    (0541) 260 226
+                </a>
             </div>
         </div>
     </div>
