--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             </div>
             <div class="col-lg-4">
                 <a href="#">
-                    (0541) 260 226
+                   <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
                 </a>
             </div>
         </div>
