--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 KuninganJakarta 12950
             </div>
             <div class="col-lg-4">
-                <a href="#">
+                <a href="#" class="link-orange-border">
                    <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
                 </a>
             </div>
