--- a/index.html
+++ b/index.html
@@ -283,6 +283,9 @@
                 <a href="#" class="link-orange-border">
                    <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
                 </a>
+                <p class="text-gray">
+                    Fax (0541) 261 532
+                </p>
             </div>
         </div>
     </div>
