--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
                 KuninganJakarta 12950
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3 text-center">
                 <a href="#" class="link-orange-border">
                    <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
                 </a>
