--- a/index.html
+++ b/index.html
@@ -287,6 +287,11 @@
                     Fax (0541) 261 532
                 </p>
             </div>
+            <div class="col-lg-3">
+                <a href="#">
+                    Ansaf Indonesia
+                </a>
+            </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
