--- a/index.html
+++ b/index.html
@@ -289,7 +289,10 @@
             </div>
             <div class="col-lg-3">
                 <a href="#">
-                    Ansaf Indonesia
+                    <i class="fab fa-facebook-square"></i> Ansaf Indonesia
+                </a>
+                <a href="#">
+                    <i class="fab fa-twitter"></i> Ansaf Indonesia
                 </a>
             </div>
         </div>
