--- a/index.html
+++ b/index.html
@@ -294,6 +294,9 @@
                 <a href="#">
                     <i class="fab fa-twitter"></i> Ansaf Indonesia
                 </a>
+                <a href="#">
+                    <i class="fab fa-youtube"></i> Ansaf Indonesia
+                </a>
             </div>
         </div>
     </div>
