--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid footer-details">
+    <div class="container-fluid footer-details mb-lg-5">
         <div class="row">
             <div class="col-lg-2">
                 <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
@@ -283,20 +283,29 @@
                 <a href="#" class="link-orange-border">
                    <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
                 </a>
-                <p class="text-gray">
+                <p class="text-gray mt-lg-3">
                     Fax (0541) 261 532
                 </p>
             </div>
             <div class="col-lg-3">
-                <a href="#">
+                <a href="#" class="text-gray d-block">
                     <i class="fab fa-facebook-square"></i> Ansaf Indonesia
                 </a>
-                <a href="#">
+                <a href="#" class="text-gray d-block">
                     <i class="fab fa-twitter"></i> Ansaf Indonesia
                 </a>
-                <a href="#">
+                <a href="#" class="text-gray d-block">
                     <i class="fab fa-youtube"></i> Ansaf Indonesia
                 </a>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid footer bg-dark-blue">
+        <div class="row">
+            <div class="col-lg-12">
+                <p class="text-white mt-lg-3 text-center">
+                    Copyright © 2020 PT Ansaf Inti Resources
+                </p>
             </div>
         </div>
     </div>
