--- a/index.html
+++ b/index.html
@@ -275,9 +275,11 @@
                 <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
             </div>
             <div class="col-lg-4">
-                Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
-                Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-                KuninganJakarta 12950
+                <p class="text-gray">
+                    Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
+                    Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
+                    KuninganJakarta 12950
+                </p>
             </div>
             <div class="col-lg-3 text-center">
                 <a href="#" class="link-orange-border">
