--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="container-fluid bg-home-top overflow-hidden">
         <div class="row">
             <div class="col-lg-12 px-0">
+                <img class="ornaments-blue" src="images/segitiga-biru-kanan-04.png" alt="">
                 <div class="carousel-homebanner owl-theme">
                     <div class="item">
                         <div class="row">
@@ -184,16 +185,16 @@
                     <div class="col-lg-9 offset-lg-3 pr-lg-5">
                         <div class="row">
                             <div class="col-lg-4">
-                                <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10.jpg" alt="">
-                                <img class="img-fluid w-100 shadow d-block" src="images/thubmnail-shadow-blue-10.png" alt="">
+                                <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-08.jpg" alt="">
+                                <h6 class="text-white title-thumbnail">Sinergi yang Kuat</h6>
                             </div>
                             <div class="col-lg-4 overflow-hidden">
-                                <img class="img-fluid w-100 d-block" src="images/our-value-content-images-11.jpg" alt="">
-                                <img class="img-fluid w-100 shadow d-block" src="images/thubmnail-shadow-blue-10.png" alt="">
+                                <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-09.jpg" alt="">
+                                <h6 class="text-white title-thumbnail">Setulus Hati</h6>
                             </div>
                             <div class="col-lg-4 overflow-hidden">
-                                <img class="img-fluid w-100 d-block" src="images/our-value-content-images-12.jpg" alt="">
-                                <img class="img-fluid w-100 shadow d-block" src="images/thubmnail-shadow-blue-10.png" alt="">
+                                <img class="img-fluid w-100 d-block" src="images/our-value-content-images-10-10.jpg" alt="">
+                                <h6 class="text-white title-thumbnail">Beroperasi Secara Produktif</h6>
                             </div>
                         </div>
                     </div>
@@ -204,6 +205,7 @@
     <div class="container-fluid bottom-content">
         <div class="row news-section">
             <div class="col-lg-12 px-lg-0">
+                <img class="ornament-blue" src="images/segitiga-biru-kiri-12.png" alt="">
                 <img class="img-content" src="images/news-images-content-10-08.jpg" alt="">
                 <div class="content-wrapper d-flex">
                     <div class="inline-block">
