--- a/vision-mission.html
+++ b/vision-mission.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
-    <title>About | Ansaf</title>
+    <title>Vision Mission | Ansaf</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -36,12 +36,8 @@
                     ABOUT US
                 </h6>
                 <h2 class="text-dark-blue">
-                  Company Profile
+                  Vision & Mission
                 </h2>
-                <p class="text-dark-blue font-titillium-italic">
-                  ...tumbuh secara bertahap, dengan keyakinan - dan integritas, produktivitas<br>
-                  yang terbukti, komitmen, serta loyalitas. Kami adalah ANSAF!
-                </p>
             </div>
           </div>
         </div>
