--- a/vision-mission.html
+++ b/vision-mission.html
@@ -23,7 +23,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid about-top">
+    <div class="container-fluid vision-top">
       <div class="row">
         <div class="col-lg-12 pl-lg-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
