--- a/vision-mission.html
+++ b/vision-mission.html
@@ -55,9 +55,9 @@
                   “
                 </h2>
                 <p class="text-white font-titillium-italic">
-                  ...untuk kami di Ansaf, baik tidaklah jika kami mampu berkontribusikan<br>
-                  yang paling OPTIMAL - dengan sepenuh hati untuk tumbuh BERSAMA<br>
-                  dengan komitmen dan kerjasama tim yang kuat.
+                  Menjadi perusahaan tambang terintegrasi yang memiliki<br>
+                  integritas, produktivitas, terpercaya, dengan pengelolaan K3LH<br>
+                  yang baik, serta mampu berkembang secara berkesinambungan
                 </p>
             </div>
           </div>
